# atat

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  memory.x  rust-toolchain  rust-toolchain.toml  rustfmt.toml
.cargo/: config  config.toml
.github/: codecov.yml
.github/workflows/: audit.yml  ci.yml  codeCov.yml  codeCov.yml_bak  codecov.yml  docs.yml  grcov.yml  lint.yml  test.yml
atat/: Cargo.toml
atat/_examples/: rtfm.rs
atat/_examples/common/: command.rs  mod.rs
atat/benches/: client.rs  ingress.rs
atat/examples/: cortex-m-rt.rs  rtfm.rs  rtic.rs  std-tokio.rs
atat/examples/common/: mod.rs  timer.rs
atat/examples/common/general/: mod.rs  responses.rs  types.rs  urc.rs
atat/src/: buffer.rs  buffers.rs  builder.rs  client.rs  clock.rs  config.rs  derive.rs  digest.rs  error.rs  fmt.rs  frame.rs  helpers.rs  ingress.rs  ingress_manager.rs  lib.rs  nom_digest.rs  parser.rs  queues.rs  reschannel.rs  response.rs  response_channel.rs  response_slot.rs  traits.rs  tx_mock.rs  urc_channel.rs  urc_matcher.rs  urchannel.rs  whoop.rs
atat/src/asynch/: buffers.rs  client.rs  ingress.rs  mod.rs  simple_client.rs
atat/src/blocking/: blocking_timer.rs  builder.rs  client.rs  ingress_manager.rs  mod.rs  queues.rs  simple_client.rs  timer.rs
atat/src/error/: cme_error.rs  cms_error.rs  connection_error.rs  mod.rs
atat_derive/: Cargo.toml
atat_derive/src/: cmd.rs  enum_.rs  helpers.rs  len.rs  lib.rs  parse.rs  resp.rs  urc.rs
docs/: streaming-architecture.md
examples/: Cargo.toml  README.md  cortex-m-rt.rs  rtfm.rs  rust-toolchain.toml
examples/common/: command.rs  mod.rs
examples/src/: lib.rs
examples/src/common/: mod.rs
examples/src/common/general/: mod.rs  responses.rs  urc.rs
serde_at/: Cargo.toml
serde_at/src/: lib.rs
serde_at/src/de/: enum_.rs  hex_str.rs  length_delimited.rs  map.rs  mod.rs  seq.rs
serde_at/src/ser/: enum_.rs  hex_str.rs  mod.rs  struct_.rs
src/: buffer.rs  client.rs  error.rs  lib.rs  parser.rs  tests.rs  traits.rs  utils.rs
