[workspace]
resolver = "2"
members = ["serde_at", "atat_derive", "atat", "examples"]


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-

[patch.crates-io]
embassy-executor = { version = "0.4", git = "https://github.com/embassy-rs/embassy", rev = "df0f41c41c685c28965942bf6e6c67d8ca166d40" }
embassy-rp = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "df0f41c41c685c28965942bf6e6c67d8ca166d40" }
embassy-time = { version = "0.2", git = "https://github.com/embassy-rs/embassy", rev = "df0f41c41c685c28965942bf6e6c67d8ca166d40" }
