[package]
name = "atat"
version = "0.20.0"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "AT Parser for serial based device crates"
readme = "../README.md"
keywords = ["arm", "cortex-m", "AT", "no-std", "embedded-hal-driver"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/atat"
edition = "2021"
documentation = "https://docs.rs/atat"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "atat"

[dependencies]
embedded-io = "0.6.0"
embedded-io-async = { version = "0.6.0", optional = true }
futures = { version = "0.3", default-features = false, optional = true }
embassy-sync = "0.5"
embassy-time = "0.2"
heapless = { version = "^0.8", features = ["serde"] }
serde_at = { path = "../serde_at", version = "^0.20.0", optional = true }
atat_derive = { path = "../atat_derive", version = "^0.20.0", optional = true }
serde_bytes = { version = "0.11.5", default-features = false, optional = true }
heapless-bytes = { version = "0.3.0", optional = true }

nom = { version = "^7.1", default-features = false }

log = { version = "^0.4", default-features = false, optional = true }
defmt = { version = "^0.3", optional = true }

[dev-dependencies]
embassy-time = { version = "0.2", features = ["std", "generic-queue"] }
critical-section = { version = "1.1", features = ["std"] }
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = ["derive", "bytes"]
defmt = ["dep:defmt", "embedded-io-async/defmt-03", "heapless/defmt-03"]
derive = ["atat_derive", "serde_at"]
bytes = ["heapless-bytes", "serde_bytes"]
custom-error-messages = []
async = ["embedded-io-async", "futures"]
std = ["serde_at/std", "nom/std", "embassy-time/std", "embedded-io/std"]
hex_str_arrays = []
