[package]
name = "atat"
version = "0.24.1"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "AT Parser for serial based device crates"
readme = "../README.md"
keywords = ["arm", "cortex-m", "AT", "no-std", "embedded-hal-driver"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/atat"
edition = "2021"
documentation = "https://docs.rs/atat"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "atat"

[dependencies]
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
futures = { version = "0.3", default-features = false }
embassy-sync = "0.7.0"
embassy-time = "0.5.0"
embassy-futures = "0.1"
heapless = { version = "^0.9.2", features = ["serde"] }
thiserror = { version = "2", default-features = false }
serde_at = { path = "../serde_at", version = "^0.24.1", optional = true }
atat_derive = { path = "../atat_derive", version = "^0.24.1", optional = true }
serde_bytes = { version = "0.11.14", default-features = false, optional = true }
heapless-bytes = { version = "0.5.0", optional = true }


nom = { version = "^7.1", default-features = false }

log = { version = "^0.4", default-features = false, optional = true }
defmt = { version = "^1.0.1", optional = true }

[dev-dependencies]
embassy-time = { version = "0.5", features = ["std"] }
critical-section = { version = "1.1", features = ["std"] }
serde_at = { path = "../serde_at", version = "^0.24.1", features = [
    "heapless",
] }
tokio = { version = "1", features = ["macros", "rt"] }
static_cell = { version = "2.0.0" }

[features]
default = ["derive", "bytes"]
defmt = ["dep:defmt", "embedded-io-async/defmt", "heapless/defmt"]
derive = ["atat_derive", "serde_at"]
bytes = ["heapless-bytes", "serde_bytes"]
custom-error-messages = []
std = ["serde_at/std", "nom/std", "embassy-time/std", "embedded-io/std"]
hex_str_arrays = []
heapless = ["serde_at/heapless"]
string_errors = []
