
[package]
name = "atat_derive"
version = "0.1.8-alpha.0"
authors = ["Mathias Koch <mk@blackbird.online>"]
edition = "2018"
description = "Derive macro for atat"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/atat_derive"

[dependencies]
ufmt = "0.1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits","full"] }
proc-macro2 = "1.0"
proc-macro-error = "0.4"
serde_at = { path = "../serde_at", version = "0.1.8-alpha.0" }

[lib]
proc-macro = true

[features]
default = ["error-message"]
error-message = []
