
[package]
name = "atat_derive"
version = "0.4.1"
authors = ["Mathias Koch <mk@blackbird.online>"]
edition = "2018"
description = "Derive macro for atat"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/atat_derive"

[dependencies]
quote = "^1"
syn = { version = "^1", features = ["full"] }
proc-macro2 = "^1"
serde_at = { path = "../serde_at", version = "^0.4.2-alpha.0"}

[lib]
proc-macro = true
