
[package]
name = "atat_derive"
version = "0.23.0"
authors = ["Mathias Koch <mk@blackbird.online>"]
edition = "2021"
description = "Derive macro for atat"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/atat_derive"
repository = "https://github.com/BlackbirdHQ/atat"
readme = "../README.md"
categories = ["no-std"]
keywords = ["derive", "AT"]

[dependencies]
quote = "^1"
syn = "2"
proc-macro2 = "^1"
serde_at = { path = "../serde_at", version = "^0.23.0" }

[lib]
proc-macro = true
