[package]
name = "atat-examples"
version = "0.18.0"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "Examples for ATAT"
keywords = ["arm", "cortex-m", "AT", "no-std", "embedded-hal-driver"]
categories = ["embedded", "no-std"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/atat"
edition = "2021"
documentation = "https://docs.rs/atat"

[[bin]]
name = "embassy"
required-features = ["embedded"]

[[bin]]
name = "std-tokio"
required-features = ["std"]

[dependencies]
atat = { path = "../atat", features = ["async"] }
embedded-io = "0.4"
critical-section = "1.1.1"

cortex-m = { version = "0.7.6", optional = true }
cortex-m-rt = { version = "0.7.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3.0", features = ["print-defmt"], optional = true }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "299689d", features = [
    "defmt",
    "nightly",
    "integrated-timers",
], optional = true }
embassy-time = { version = "0.1.0" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "299689d", features = [
    "unstable-pac",
    "nightly",
    "time-driver",
    "critical-section-impl",
], optional = true }

env_logger = { version = "0.10", optional = true }
tokio = { version = "1.26", default-features = false, features = [
    "time",
    "rt-multi-thread",
    "macros",
], optional = true }
tokio-serial = { version = "5.4.4", optional = true }

[features]
embedded = [
    "dep:panic-probe",
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "dep:defmt-rtt",
    "dep:embassy-rp",
    "dep:embassy-executor",
    "embassy-rp?/defmt",
    "atat/defmt",
    "atat/thumbv6"
]
std = [
    "dep:env_logger",
    "dep:tokio",
    "dep:tokio-serial",
    "atat/log",
    "embassy-time/std",
    "embassy-time/generic-queue",
    "critical-section/std",
]
