[package]
authors = ["Mathias Koch <mk@blackbird.online>"]
edition = "2018"
categories = ["no-std"]
description = "serde serializer/deserializer for AT commands"
readme = "../README.md"
documentation = "https://docs.rs/serde_at"
repository = "https://github.com/BlackbirdHQ/atat"
keywords = ["serde", "AT"]
license = "MIT OR Apache-2.0"
name = "serde_at"
version = "0.13.0"

[dependencies]
heapless = { version = "^0.7", features = ["serde"] }

[dependencies.serde]
default-features = false
version = "^1"

[dev-dependencies]
serde_derive = "^1"

[features]
default = []
custom-error-messages = []
std = []
