[package]
authors = ["Mathias Koch <mk@blackbird.online>"]
edition = "2021"
categories = ["no-std"]
description = "serde serializer/deserializer for AT commands"
readme = "../README.md"
documentation = "https://docs.rs/serde_at"
repository = "https://github.com/BlackbirdHQ/atat"
keywords = ["serde", "AT"]
license = "MIT OR Apache-2.0"
name = "serde_at"
version = "0.20.0"

[dependencies]
heapless = { version = "^0.8", features = ["serde"] }
serde = { version = "^1", default-features = false }
heapless-bytes = { version = "0.3.0" }

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
serde_derive = "^1"
serde_bytes = { version = "0.11.5", default-features = false }

[features]
default = []
custom-error-messages = []
std = []
hex_str_arrays = []
