[package]
authors = ["Mathias Koch <mk@blackbird.online>"]
edition = "2021"
categories = ["no-std"]
description = "serde serializer/deserializer for AT commands"
readme = "../README.md"
documentation = "https://docs.rs/serde_at"
repository = "https://github.com/BlackbirdHQ/atat"
keywords = ["serde", "AT"]
license = "MIT OR Apache-2.0"
name = "serde_at"
version = "0.23.0"

[dependencies]
heapless = { version = "^0.8", features = ["serde"], optional = true }
serde = { version = "^1", default-features = false }
heapless-bytes = { version = "0.3.0", optional = true }

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
serde_derive = "^1"
serde_bytes = { version = "0.11.14", default-features = false }

[features]
default = []
custom-error-messages = []
std = []
hex_str_arrays = []
alloc = ["serde/alloc"]
heapless = ["dep:heapless", "dep:heapless-bytes"]
